// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup passes prefixCls down to checkbox 1`] = `
LoadedCheerio {
  "0": <div
    class="my-checkbox-group"
  >
    <label
      class="my-checkbox-wrapper my-checkbox-group-item"
    >
      <span
        class="my-checkbox"
      >
        <input
          class="my-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="my-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="my-checkbox-wrapper my-checkbox-group-item"
      style="font-size:12px"
    >
      <span
        class="my-checkbox"
      >
        <input
          class="my-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="my-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`CheckboxGroup rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-checkbox-group dcloud-checkbox-group-rtl"
  />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
